schemars/tests/ui/schema_for_arg_value.rs
use schemars::schema_for;

fn main() {
    let _schema = schema_for!(123);
}
